--- a/MusicCenter.DataAccess/MusicCenter.EfDataAccess.csproj
+++ b/MusicCenter.DataAccess/MusicCenter.EfDataAccess.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MusicCenter.Domain\MusicCenter.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
