chore: remove broken folders in Application

--- a/MusicCenter.Application/MusicCenter.Application.csproj
+++ b/MusicCenter.Application/MusicCenter.Application.csproj
@@ -5,12 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MusicCenter.Domain\MusicCenter.Domain.csproj" />
+    <Compile Remove="Commands\**" />
+    <Compile Remove="Queries\**" />
+    <EmbeddedResource Remove="Commands\**" />
+    <EmbeddedResource Remove="Queries\**" />
+    <None Remove="Commands\**" />
+    <None Remove="Queries\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Queries\" />
+    <ProjectReference Include="..\MusicCenter.Domain\MusicCenter.Domain.csproj" />
   </ItemGroup>
 
 </Project>
