feat(api): add jwt authorization

--- a/MusicCenter.API/Properties/launchSettings.json
+++ b/MusicCenter.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "MusicCenter.API": {
+    "MusicCenter.API - Dev": {
       "commandName": "Project",      
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
