--- a/MusicCenter.API/MusicCenter.API.csproj
+++ b/MusicCenter.API/MusicCenter.API.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MusicCenter.Application\MusicCenter.Application.csproj" />
+    <ProjectReference Include="..\MusicCenter.DataAccess\MusicCenter.EfDataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
