--- a/MusicCenter.API/appsettings.Development.json
+++ b/MusicCenter.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "JwtIssuer": "music_center_api",
+  "JwtSecretKey": "hWmZq4t7w!z%C*F)J@NcRfUjXn2r5u8x",
+  "ApplicationInstance": "Development"
 }
