--- a/MusicCenter.API/MusicCenter.API.csproj
+++ b/MusicCenter.API/MusicCenter.API.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
@@ -12,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MusicCenter.Application\MusicCenter.Application.csproj" />
     <ProjectReference Include="..\MusicCenter.DataAccess\MusicCenter.EfDataAccess.csproj" />
+    <ProjectReference Include="..\MusicCenter.Implementation\MusicCenter.Implementation.csproj" />
   </ItemGroup>
 
 </Project>
