feat(api): send email on registration

--- a/MusicCenter.API/appsettings.Development.json
+++ b/MusicCenter.API/appsettings.Development.json
@@ -8,5 +8,7 @@
   },
   "JwtIssuer": "music_center_api",
   "JwtSecretKey": "hWmZq4t7w!z%C*F)J@NcRfUjXn2r5u8x",
-  "ApplicationInstance": "Development"
+  "ApplicationInstance": "Development",
+  "AppEmail": "musiccenterict@gmail.com",
+  "AppPassword": "AAA123456789!_"
 }
